fix footer on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -160,7 +160,7 @@ footer {
 		justify-content: space-between;
 		p {
 			margin: 0;
-			font-size: 14px;
+			font-size: 12px;
 		}
 		a {
 			font-weight: bold;
